# tile-matching-tools

./: .gitignore  Makefile  README.md  dev_requirements.txt  pyproject.toml
.github/workflows/: package-test.yml
docs_templates/: conf.py_t
src/inf122_tmge/: __init__.py
src/inf122_tmge/core/: __init__.py  board_factory.py  game_engine.py  game_state.py  tile_builder.py  tile_factory.py
src/inf122_tmge/model/: exceptions.py  tile_color.py
src/inf122_tmge/model/board/: __init__.py  board_factory.py  game_board.py
src/inf122_tmge/model/match/: __init__.py
src/inf122_tmge/model/score/: __init__.py
src/inf122_tmge/model/tiles/: __init__.py  movement_rule.py  tile.py  tile_appearance.py  tile_group.py  tile_shape.py
src/inf122_tmge/view/: __init__.py  view.py
src/tilematch_tools/: __init__.py
src/tilematch_tools/core/: __init__.py  board_factory.py  exceptions.py  game_engine.py  game_factory.py  game_loop.py  game_state.py  tile_builder.py
src/tilematch_tools/model/: __init__.py  exceptions.py  tile_shape.py
src/tilematch_tools/model/board/: __init__.py  game_board.py  (+1 more)
src/tilematch_tools/view/: __init__.py  board_view.py  event_manager.py  game_event.py  game_title.py  game_view.py  game_widgets.py  score_view.py  view.py  view_constants.py
test/unit/: test_game_board.py  test_inf122tmge.py  test_tilematch_tools.py  test_view.py
test/unit/core/: test_board_factory.py  test_game_engine.py  test_game_factory.py  test_game_loop.py  test_game_state.py  test_tile_builder.py
test/unit/view/: test_board_view.py  test_game_view.py  test_score_view.py
(+16 files in other folders)
