[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "inf122_tmge"
version = "0.0.1"
description = "Implementation of a generic tile matching game env"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
markers = "integration: For integration tests"