[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tilematch_tools"
version = "0.0.1"
description = "Utilities that define the interface of a general tile matching game"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
markers = "integration: For integration tests"
